k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-mongo
  namespace: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-mongo
  template:
    metadata:
      labels:
        app: flask-mongo
    spec:
      containers:
        - name: flask-mongo
          image: cescye/flask-mongo:latest
          ports:
            - containerPort: 5000
