k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web
  namespace: flask
spec:
  selector:
    app: flask-mongo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
