k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    cert-manager.io/cluster-issuer: k8s-ca-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - flask-app.com
    secretName: flask-app-tls
  rules:
  - host: flask-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-web
            port:
              number: 80
